# punto-steering-control

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  gen_cmake.py
data/: CMakeLists.txt  Data.h  InputType.h  OutputType.h
interface/: CMakeLists.txt
io/: CMakeLists.txt  IOCoordinator.cpp  IOCoordinator.h  Input.h  Output.h  StatusInterface.h
io/ElectronicsLayer/: CMakeLists.txt
io/interface/: CMakeLists.txt  GamepadController.cpp  GamepadController.h  GamepadInX.cpp  GamepadInX.h  GamepadInY.cpp  GamepadInY.h
io/physical/: CMakeLists.txt
io/physical/in/: CMakeLists.txt
io/physical/in/gamepad/: CMakeLists.txt
logic/: CMakeLists.txt  DataProcessor.h  GamepadControlProcessor.cpp  GamepadControlProcessor.h  main.cpp
tests/: CMakeLists.txt  TestIOCoordinator.cpp  TestIOCoordinator.h  TestOutput.cpp  TestOutput.h  main.cpp  outtests.cpp  test_gamepad_controller.cpp
tests/io/: CMakeLists.txt  out_tests.cpp
